v4.9.0/_sources/generated/pcdsdevices.gauge.GaugeSetBase.rst.txt
pcdsdevices.gauge.GaugeSetBase
==============================

.. currentmodule:: pcdsdevices.gauge

.. autoclass:: GaugeSetBase

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - gcc (FCpt)
          - :class:`~pcdsdevices.gauge.GaugeColdCathode`
          - ``{self.prefix}:GCC:{self.index}``
          - 
          - normal
          - 
    

    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: egu
    .. automethod:: get
    .. automethod:: pressure
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    